fix course dropping issue with text-align

--- a/style.css
+++ b/style.css
@@ -87,18 +87,18 @@ font-size: 250%;
   display: inline-block;
   vertical-align: text-top;
   width: 25%;
-  margin: 30px 30px 30px 3px;
-  min-width: 270px;
+  margin: 30px 3px 3px 3px;
+  min-width: 305px;
   text-align: center;
   height: 550px;
+
 }
 
 .courses_group {
-  display: block;
-  margin: auto;
-  width: 80%;
-  padding-left: 10%;
-
+  display: inline-block;
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
 }
 
 #mcimage {
